@@ -1,4 +1,4 @@
-.TH HDPARM 8 "June 2015" "Version 9.47"
+.TH HDPARM 8 "June 2015" "Version 9.48"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
